feat: Add type inference from queryFn return type (#403)
Co-authored-by: Sam Willis <sam.willis@gmail.com>

--- a/packages/query-db-collection/package.json
+++ b/packages/query-db-collection/package.json
@@ -3,7 +3,8 @@
   "description": "TanStack Query collection for TanStack DB",
   "version": "0.2.3",
   "dependencies": {
-    "@tanstack/db": "workspace:*"
+    "@tanstack/db": "workspace:*",
+    "@standard-schema/spec": "^1.0.0"
   },
   "devDependencies": {
     "@tanstack/query-core": "^5.0.5",
