--- a/packages/rxdb-db-collection/package.json
+++ b/packages/rxdb-db-collection/package.json
@@ -35,6 +35,7 @@
   "packageManager": "pnpm@10.18.2",
   "peerDependencies": {
     "rxdb": ">=16.17.2",
+    "rxjs": ">=7.8.2",
     "typescript": ">=4.7"
   },
   "author": "Kyle Mathews",
