Schemas Step 1: Infer types from PowerSync schema table.

--- a/packages/powersync-db-collection/package.json
+++ b/packages/powersync-db-collection/package.json
@@ -10,11 +10,11 @@
     "p-defer": "^4.0.1"
   },
   "peerDependencies": {
-    "@powersync/common": "^1.39.0"
+    "@powersync/common": "0.0.0-dev-20251021113138"
   },
   "devDependencies": {
-    "@powersync/common": "0.0.0-dev-20251003085035",
-    "@powersync/node": "0.0.0-dev-20251003085035",
+    "@powersync/common": "0.0.0-dev-20251021113138",
+    "@powersync/node": "0.0.0-dev-20251021113138",
     "@types/debug": "^4.1.12",
     "@vitest/coverage-istanbul": "^3.2.4"
   },
